# WebTemp

./: .dockerignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  gunicorn.config.py  manage.py  parcer.py  pyproject.toml  requiments.txt
Arduino/TemperatureEth/: TemperatureEth.ino
Arduino/TemperatureEth_noLSD/: TemperatureEth_noLSD.ino
WebT/: admin.py  apps.py  form.py  models.py  urls.py  views.py
WebT/migrations/: 0001_initial.py  0002_auto_20210504_1415.py
WebTemp/: asgi.py  settings.py  urls.py  wsgi.py
WebTemp/WebTemp/: settings.py  urls.py
static/mycss/: main.css
templates/: account_detail.html  account_edit.html  base.html  graph.html  home.html  sensor_delete.html  sensor_edit.html  signup.html
templates/js/: script.js
templates/registration/: login.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
