[tool.poetry]
name = "webTemp"
version = "0.1.0"
description = ""
authors = ["maxshukletsov <bind2say45>"]

[tool.poetry.dependencies]
python = "3.8.10"
asgiref = "3.3.1"
beautifulsoup4 = "4.9.3"
certifi = "2020.11.8"
chardet = "3.0.4"
cycler = "0.10.0"
Django = "3.1.3"
idna = "2.10"
kiwisolver = "1.3.1"
matplotlib = "3.3.3"
numpy = "1.19.4"
Pillow = "8.0.1"
pyparsing = "2.4.7"
python-dateutil = "2.8.1"
pytz = "2020.4"
requests = "2.25.0"
response = "0.5.0"
scipy = "1.5.4"
six = "1.15.0"
soupsieve = "2.0.1"
sqlparse = "0.4.1"
urllib3 = "1.26.2"
psycopg2 = "^2.9.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
